# lifeAI

./: .env.example  .gitignore  README.md  TODO.md  ZMQProxy.py  config.json  lifeAIdoc.py  lifeAIframesync.py  lifeAIimage.py  lifeAIlists.py  lifeAIllm.py  lifeAIllmAPI.py  lifeAInewsCast.py  lifeAIplayer.py  lifeAIpromptOptimize.py  lifeAIpromptOptimizeAPI.py  lifeAIsubTitleBurnIn.py  lifeAItti.py  lifeAIttm.py  lifeAItts.py  lifeAIttsMimic3.py  lifeAItwitchChat.py  lifeAItwitchStream.py  requirements.txt  startLifeAI.py  test.py  zmqTTIlisten.py  zmqTTMlisten.py  zmqTTSclient.py  zmqTTSlisten.py  zmqTTStest.py  zmqTextClient.py
lifeAIllm/: CMakeLists.txt  README.md  build-info.h  cmake_install.cmake  lifeAIllm.cpp
personalities/: buddha.sh  llm.sh  llm70b.sh  llm_autogen.sh
